feat: 新增 editor 组件

--- a/packages/cosey/package.json
+++ b/packages/cosey/package.json
@@ -18,6 +18,7 @@
     "@floating-ui/dom": "^1.6.13",
     "@gunny/persist": "^1.0.2",
     "@iconify/types": "^2.0.0",
+    "@types/is-hotkey": "^0.1.10",
     "@types/nprogress": "^0.2.3",
     "@types/stylis": "^4.2.7",
     "@vue/shared": "^3.5.13",
@@ -29,12 +30,14 @@
     "echarts": "^5.6.0",
     "element-plus": "^2.9.10",
     "highlight.js": "^11.11.1",
+    "is-hotkey": "^0.2.0",
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
     "quill": "^2.0.3",
+    "slate-vue3": "^0.7.9",
     "stylis": "^4.3.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -59,12 +62,14 @@
     "echarts": "^5.6.0",
     "element-plus": "^2.9.10",
     "highlight.js": "^11.11.1",
+    "is-hotkey": "^0.2.0",
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
     "quill": "^2.0.3",
+    "slate-vue3": "^0.7.9",
     "stylis": "^4.3.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
