--- a/packages/cosey/package.json
+++ b/packages/cosey/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cosey",
-  "version": "0.3.16",
+  "version": "0.3.17",
   "description": "基于 Vue3 + vite 的后台管理系统框架",
   "type": "module",
   "main": "index.ts",
@@ -18,6 +18,7 @@
     "@floating-ui/dom": "^1.6.13",
     "@gunny/persist": "^1.0.2",
     "@iconify/types": "^2.0.0",
+    "@types/mime-types": "^3.0.1",
     "@types/nprogress": "^0.2.3",
     "@types/stylis": "^4.2.7",
     "@vue/shared": "^3.5.13",
@@ -32,6 +33,7 @@
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
+    "mime-types": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
     "quill": "^2.0.3",
@@ -63,6 +65,7 @@
     "jszip": "^3.10.1",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
+    "mime-types": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
     "quill": "^2.0.3",
