--- a/docs/package.json
+++ b/docs/package.json
@@ -24,7 +24,7 @@
     "tailwindcss": "^4.0.9",
     "vite": "^6.0.3",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vitepress": "^1.6.3",
+    "vitepress": "2.0.0-alpha.12",
     "vitepress-plugin-group-icons": "^1.6.1"
   },
   "peerDependencies": {
@@ -39,6 +39,6 @@
   "dependencies": {
     "@cosey/mock": "^0.1.5",
     "@iconify-json/carbon": "^1.2.8",
-    "cosey": "file:../lib-dist/cosey"
+    "cosey": "workspace:^"
   }
 }
