--- a/packages/cosey/package.json
+++ b/packages/cosey/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cosey",
-  "version": "0.5.11",
+  "version": "0.5.16",
   "description": "基于 Vue3 + vite 的后台管理系统框架",
   "type": "module",
   "main": "index.ts",
@@ -36,6 +36,7 @@
     "pinia": "^3.0.2",
     "quill": "^2.0.3",
     "stylis": "^4.3.6",
+    "svga": "^2.1.1",
     "vue": "^3.5.21",
     "vue-i18n": "^11.1.10",
     "vue-router": "^4.5.0"
@@ -67,6 +68,7 @@
     "pinia": "^3.0.2",
     "quill": "^2.0.3",
     "stylis": "^4.3.6",
+    "svga": "^2.1.1",
     "vue": "^3.5.21",
     "vue-i18n": "^11.1.10",
     "vue-router": "^4.5.0"
