--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "axios": "^1.7.9",
     "cosey": "workspace:^",
     "dayjs": "^1.11.13",
-    "element-plus": "^2.10.4",
+    "element-plus": "^2.11.4",
     "lodash-es": "^4.17.21",
     "vue": "^3.5.21",
     "vue-i18n": "^11.1.10",
@@ -92,6 +92,7 @@
     "typescript-eslint": "^8.32.1",
     "vite": "^6.0.3",
     "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-devtools": "^8.0.2",
     "vitepress": "^1.6.3",
     "vue-tsc": "^2.2.8"
   }
