--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "commit": "commit",
     "new-component": "tsx ./scripts/new-component.ts",
     "nc": "npm run new-component",
-    "docs:dev": "tsx ./scripts/build-docs-comp.ts && cross-env NODE_ENV=development vitepress dev docs --force --port 5174",
-    "docs:build": "tsx ./scripts/build-docs-comp.ts && cross-env NODE_ENV=production vitepress build docs",
+    "docs:dev": "cross-env NODE_ENV=development vitepress dev docs --force --port 5174",
+    "docs:build": "cross-env NODE_ENV=production vitepress build docs",
+    "docs:build-debug": "cross-env NODE_ENV=production DEBUG=true vitepress build docs",
     "docs:preview": "vitepress preview docs",
     "docs:add-cosey": "pnpm -F @cosey/docs add file:../lib-dist/cosey",
     "cosey:version": "tsx ./scripts/version.ts",
