--- a/docs/package.json
+++ b/docs/package.json
@@ -21,6 +21,7 @@
     "element-plus": "^2.11.4",
     "glob": "^11.0.2",
     "markdown-it-container": "^4.0.0",
+    "sass": "^1.89.0",
     "tailwindcss": "^4.0.9",
     "vite": "^7.1.7",
     "vite-plugin-svg-icons": "^2.0.1",
