feat(editor-v2): 新增代码块

--- a/packages/cosey/package.json
+++ b/packages/cosey/package.json
@@ -20,6 +20,7 @@
     "@iconify/types": "^2.0.0",
     "@types/is-hotkey": "^0.1.10",
     "@types/nprogress": "^0.2.3",
+    "@types/prismjs": "^1.26.5",
     "@types/stylis": "^4.2.7",
     "@vue/shared": "^3.5.13",
     "@vueuse/core": "^13.2.0",
@@ -37,6 +38,7 @@
     "mime": "^4.0.7",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
+    "prismjs": "^1.30.0",
     "quill": "^2.0.3",
     "slate-vue3": "^0.8.0",
     "stylis": "^4.3.6",
@@ -72,6 +74,7 @@
     "mime": "^4.0.7",
     "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
+    "prismjs": "^1.30.0",
     "quill": "^2.0.3",
     "slate-vue3": "^0.8.0",
     "stylis": "^4.3.6",
