--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "cosey:version": "tsx ./scripts/version.ts",
     "cosey:build": "tsx ./scripts/build.ts",
     "cosey:publish": "tsx ./scripts/publish.ts",
-    "cosey:deploy": "tsx ./scripts/deploy.ts"
+    "cosey:deploy": "tsx ./scripts/deploy.ts",
+    "changelog": "tsx ./scripts/changelog.ts",
+    "tag": "tsx ./scripts/tag.ts"
   },
   "lint-staged": {
     "*.{js,mjs,cjs,jsx,ts,mts,cts,tsx,vue}": "eslint --fix",
@@ -54,6 +56,7 @@
     "@eslint/js": "^9.27.0",
     "@rollup/plugin-json": "^6.1.0",
     "@types/babel__core": "^7.20.5",
+    "@types/conventional-changelog": "^6.0.0",
     "@types/crypto-js": "^4.2.2",
     "@types/fs-extra": "^11.0.4",
     "@types/gh-pages": "^6.1.0",
@@ -62,12 +65,14 @@
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it": "^14.1.2",
     "@types/semver": "^7.7.0",
+    "@types/shelljs": "^0.8.17",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/babel-plugin-jsx": "^1.4.0",
     "@vue/runtime-core": "^3.5.13",
     "@vue/shared": "^3.5.13",
     "consola": "^3.3.3",
+    "conventional-changelog": "^7.1.1",
     "cross-env": "^7.0.3",
     "esbuild": "^0.25.4",
     "eslint": "^9.27.0",
@@ -87,6 +92,7 @@
     "rollup": "^4.40.2",
     "sass": "^1.82.0",
     "semver": "^7.7.1",
+    "shelljs": "^0.10.0",
     "tailwindcss": "^4.0.9",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
