--- a/packages/cosey/package.json
+++ b/packages/cosey/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cosey",
-  "version": "0.10.1",
+  "version": "0.10.9",
   "description": "基于 Vue3 + vite 的后台管理系统框架",
   "type": "module",
   "main": "index.ts",
@@ -10,7 +10,6 @@
   },
   "devDependencies": {
     "@casl/ability": "^6.7.3",
-    "@cosey/icons": "^0.1.8",
     "@ctrl/tinycolor": "^4.1.0",
     "@element-plus/icons-vue": "^2.3.1",
     "@emotion/hash": "^0.9.2",
@@ -47,7 +46,6 @@
   },
   "peerDependencies": {
     "@casl/ability": "^6.7.3",
-    "@cosey/icons": "^0.1.8",
     "@ctrl/tinycolor": "^4.1.0",
     "@element-plus/icons-vue": "^2.3.1",
     "@emotion/hash": "^0.9.2",
@@ -84,5 +82,8 @@
     "url": "git+https://github.com/sutras/cosey.git"
   },
   "author": "wuzhitao",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@cosey/icons": "^0.1.8"
+  }
 }
