fix(layout-menu): 修复菜单图标折叠隐藏问题

--- a/packages/cosey/package.json
+++ b/packages/cosey/package.json
@@ -81,9 +81,16 @@
     "type": "git",
     "url": "git+https://github.com/sutras/cosey.git"
   },
+  "homepage": "https://docs.cosey.wzt.zone/",
   "author": "wuzhitao",
   "license": "MIT",
   "dependencies": {
     "@cosey/icons": "^0.1.8"
-  }
+  },
+  "keywords": [
+    "admin",
+    "backstage management system",
+    "vue3",
+    "vite"
+  ]
 }
